More tweaks to end of chapter 3 & beginning of chapter 4.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -567,14 +567,14 @@ The OVW Group's reconstruction of St Andrews cathedral, as shown in figures \ref
 
 %=========================================================================================================
 
-\subsection{Evaluation Process}
+\subsection{Evaluation Setup}
 
 %Magnetic declination information was entered into the HMC6343 for the position of the cathedral and the date of our experiments. The HMC6343's hard-iron offset calculation feature was used each time the hardware configuration was altered. The sampling frequency of the HMC6343 was set to its highest value of 10Hz. Orientation was set to `upright front' to match the physical orientation of the IC in the experiments.
 
 
 %The MAX-6 was operated in `pedestrian' dynamic platform model, use of SBAS correction data was enabled and frequency of readings was set to the maximum of 5Hz.
 
-For the purposes of evaluating VTW at the cathedral, a temporary server and network setup was effected using a Lenovo ThinkPad X61s\thinkpadFootnote{} laptop computer to host the OpenSim server. This was connected to a Linksys WRT54G\wrtFootnote{} wireless router, powered from a 12V sealed lead-acid battery, to provide wireless communication between the OpenSim server and the WindPad over a much larger range than the laptop's internal wireless interface could provide. This setup is shown in use at the cathedral by figure \ref{pangolin_laptop_router_battery.jpg}, the architecture of this experimental implementation is shown by figure \ref{vtw_implementation.png} and figure \ref{vtw_in_use.jpg} shows VTW in use at the cathedral.
+For the purposes of evaluating VTW at the cathedral, a temporary server and network setup was effected using a Lenovo ThinkPad X61s\thinkpadFootnote{} laptop computer to host the OpenSim server. This was connected to a Linksys WRT54G\wrtFootnote{} wireless router, powered from a 12V sealed lead-acid battery, to provide wireless communication between the OpenSim server and the WindPad over a much larger range than the laptop's internal wireless interface could provide. This setup is shown in use at the cathedral by figure \ref{pangolin_laptop_router_battery.jpg}, the architecture of this experimental implementation is shown by figure \ref{vtw_implementation.png} and figure \ref{vtw_in_use.jpg} shows the VTW tablet itself in use at the cathedral.
 
 \TwoFig{pangolin_laptop_router_battery.jpg} {OpenSim Server and wireless AP used for VTW experiments.} {pangolin_laptop_router_battery.jpg}
        {vtw_in_use.jpg} {VTW in use at St Andrews cathedral.} {vtw_in_use.jpg}
@@ -588,7 +588,7 @@ For the purposes of evaluating VTW at the cathedral, a temporary server and netw
 
 %=========================================================================================================
 
-\subsection{GPS Performance}
+\subsection{Position Control Performance}
 
 \newcommand{\ubloxcepFootnote}{\footnote{\url{https://u-blox.com/images/downloads/Product_Docs/MAX-6_ProductSummary_(GPS.G6-HW-10089).pdf}}}
 
@@ -602,7 +602,7 @@ For the purposes of evaluating VTW at the cathedral, a temporary server and netw
 
 %=====================
 
-The product summary for the MAX-6 claims accuracy of 2.5m Circular Error Probable (CEP) without SBAS corrections and 2m CEP with SBAS corrections \textit{``demonstrated with a good active antenna''}\ubloxcepFootnote{}. This means that in an ideal situation with SBAS correction data available there is 50\% certainty that each position reported by the GPS receiver will be within 2m of its actual position. The SL-1202 antenna used by VTW is passive, however as the distance between antenna and the MAX-6 IC itself in the hardware application is only a few millimeters there would be negligible benefit from using an active antenna. Whether the SL-1202 constitutes `good' for achieving the headlining performance characteristics of the MAX-6 is debatable as the definition of `good' is not provided in the product summary.
+The product summary for the MAX-6 claims accuracy of 2.5m Circular Error Probable (CEP) without SBAS corrections and 2m CEP with SBAS corrections \textit{``demonstrated with a good active antenna''}\ubloxcepFootnote{}. This means that in an ideal situation with SBAS correction data available there is 50\% certainty that each position reported by the GPS receiver will be within 2m of its actual position. The SL-1202 antenna used by VTW is passive, however as the distance between antenna and the MAX-6 IC itself in the hardware application is only a few millimeters there would be negligible benefit from using an active antenna. Whether the SL-1202 constitutes `good' for achieving the headlining performance characteristics of the MAX-6 is debatable however, as the definition of `good' is not provided in the product summary.
 
 To determine the real world accuracy attainable with the MAX-6 outfitted with the SL-1202 in the scenario of the cathedral as a cultural heritage site and thus which of the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage} the VTW platform could support, a route around the St Andrews cathedral ruins akin to the route that a visitor might take was planned. The route was walked with the MAX-6 connected to a laptop computer via an Arduino operating as a UART, feeding the raw NMEA messages into the u-center software version 7.0 which logged the messages for later evaluation. Simultaneously for comparative purposes a mid-range consumer Android smartphone was used to record the same track: a HTC One S\htconesFootnote{} containing a gpsOne Gen 8A solution within its Qualcomm Snapdragon S4 processor\snapdragonFootnote{}, using Google's My Tracks\mytracksFootnote{} app version 2.0.3 to record the data.
 
@@ -634,7 +634,7 @@ The maximum inaccuracies were recorded when walking along the South wall of the 
 \label{vtw_alll_routes_first_half.png}
 \end{figure}
 
-When analyzing the sub-track in the vicinity of the nave (see figure \ref{vtw_all_routes_second_half.png}) it can be seen that although the MAX-6 outperformed the smartphone in terms of Hausdorff distance this relationship is misleading as the smartphone track corresponded more closely in shape to the planned route even if it did stray further from it at its extreme. The discrepancy in the behavior of the two receivers in this situation is attributed to different implementations of dead-reckoning functionality between the receivers. Dead-reckoning is the process used when the GPS receiver loses reception of location data from satellites and extrapolates its position based upon a combination of the last received position data and the velocity of travel at the time of receiving these data (defined for the MAX-6 by the Dynamic Platform Model chosen).
+When analyzing the sub-track in the vicinity of the nave (see figure \ref{vtw_all_routes_second_half.png}) it can be seen that although the MAX-6 outperformed the smartphone in terms of Hausdorff distance this relationship is misleading as the smartphone track corresponded more closely in shape to the planned route even if it did stray further from it at its extreme. The discrepancy in the behavior of the two receivers in this situation is attributed to different implementations of dead-reckoning functionality between the receivers. Dead-reckoning is the process used when the GPS receiver loses reception of location data from satellites and extrapolates its position based upon a combination of the last received position data and the velocity of travel at the time of receiving these data (defined for the MAX-6 by the Dynamic Platform Model chosen, as detailed in appendix \ref{appendix-vtw-hardware}.
 
 In addition to the accuracy of the position tracking it is also important to consider the frequency and granularity of these data. Even if the position data used by a freeform explorative parallel reality system were extremely accurate, the experience of using that platform would be poor if these data were reported too infrequently, as it would either lead to `jumpy' movement where the virtual view had to move a substantial distance to match each newly reported real position, or a reliance upon dead-reckoning to predict the user's movement between subsequent data. Likewise even with accurate and frequently reported position data, if the granularity of these data is not especially fine then the experience of using the platform will be negatively impacted by an inability to make small real movements and see them reflected as similarly small virtual movements when trying to pay attention to specific aspects of the environments.
 
@@ -662,7 +662,9 @@ However when the MAX-6 readings were integrated into the VTW platform and it was
 
 %=========================================================================================================
 
-\subsection{Graphical Performance}
+\subsection{Orientation Control and Graphical Performance}
+
+The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. This shortcoming is something that has already been addressed since VTW's development, by the introduction of commodity orientation sensors that sample at much higher rates and which have already begun to find their way into the realm of midrange smartphones and tablets.
 
 VTW averaged framerates between 20 and 25 frames per second (fps) with the modified Second Life client's quality option set to the `Low' position during testing at the cathedral site. Figure \ref{vtw-framerates.png} shows average framerates of the client's different quality options when standing at two different positions within the cathedral site; one `indoor' position from the centre of the nave and one `outdoor' position from the grassy area surrounded by the cloisters. The framerates for the indoor position were lower than those for the outdoor position as the virtual cathedral model features substantially more detail indoors than outdoors, due to the number of furnishings, tapestries, etc. that originally filled the building and which have been faithfully reconstructed in the virtual model.
 
@@ -673,21 +675,14 @@ VTW averaged framerates between 20 and 25 frames per second (fps) with the modif
 	\label{vtw-framerates.png}
 \end{figure}
 
-Framerate has a readily apparent effect upon user satisfaction of graphical applications with higher framerates, and the smoother and more natural seeming motion that they result in, leading to higher satisfaction~\cite{Claypool2006a}. Framerate is often a trade off between the computational power of the available graphical hardware and the quality and complexity of the graphics desired. Assuming no change in software, an increase in graphical quality and complexity almost invariably requires an increase in the computational power of the graphical hardware in order to maintain a similar framerate, while sacrificing graphical quality and complexity will result in an increase in framerate upon the same graphical hardware. This trade off is often more apparent for applications destined for mobile devices than those for desktop devices, as the computational power of mobile graphical hardware is much more strictly limited by the size, weight, power consumption and heat dissipation limitations of mobile devices.
-
 The 20 to 25 fps that the VTW platform was able to achieve with the Second Life client's quality set to `Low' provided the best experience during testing. Whilst increasing the quality setting resulted in higher graphical quality and level of detail, the accompanying reduction in frame rate led to a worsened overall experience. The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters~\cite{Claypool2006}, but overall user experience would nonetheless have been improved by a higher frame rate.
 
-It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW. Indeed, the Second Life/OpenSim software ecosystem is an inherently desktop environment and making use of a software environment with support specifically for mobile deployment, such as Unity, would have allowed for higher framerates while matching or surpassing the graphical quality of the VTW platform, at the cost of a lengthy conversion process to move 3D assets from Second Life/OpenSim into this alternative environment. It is also worth noting that the graphical capabilities of both desktop and mobile devices are steadily increasing with every new hardware generation, with the 3D entertainment capabilities of mobile devices now representing an important factor in the buyer's decision making process.
-
-The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. This shortcoming is something that has already been addressed since VTW's development, by the introduction of commodity orientation sensors that sample at much higher rates and which have already begun to find their way into the realm of midrange smartphones and similar consumer electronic devices, in addition to more specialist items such as virtual reality HMDs.
-
-In summary, the negative effect upon user experience of low framerates, the restriction of graphical quality to those levels that allow for sufficient framerates to be produced, and the slow response of camera orientation to user movement throughout the VTW testing should be viewed as a limitation of the available technology rather than a limitation of the principal of parallel reality. Already since the development of VTW, we have seen the introduction of handheld devices with substantially greater graphical capabilities, additionally containing orientation sensors of equal or higher accuracy and that boast much higher sample rates. Exploiting these advances will allow for substantial increases to user satisfaction of parallel reality experiences, while making such experiences more accessible as the reliance upon supplementary supporting hardware to imbue a handheld device with the required positional and orientational sensing abilities becomes moot.
+It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW. Indeed, the Second Life/OpenSim software ecosystem is an inherently desktop environment and making use of a software environment with specific support for mobile deployment, such as Unity, would have allowed for higher framerates while matching or surpassing the graphical quality of the VTW platform, at the cost of a lengthy conversion process to move existing 3D assets from Second Life/OpenSim into this alternative environment. It is also worth noting that the graphical capabilities of both desktop and mobile devices are steadily increasing with every new hardware generation, with the 3D entertainment capabilities of mobile devices now representing an important factor in the buyer's decision making process.
 
 %=========================================================================================================
 
 \subsection{Performance Implications}
-
-When considering the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage} it is important to remember that this figure represents the worst case scenario and is not necessarily a good indication of average performance. This value, analogous to $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, represents a constraint on the granularity of the content; it is the minimum distance required between any two points to guarantee that they are correctly differentiated between, however it does not mean that two points separated by less than this distance will \textit{never} be correctly differentiated between.
+When considering the implications of the position control performance and examining the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage}, it is important to remember that this figure represents the worst case scenario and is not necessarily a good indication of average performance. This value, analogous to $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, represents a constraint on the granularity of the content; it is the minimum distance required between any two points to guarantee that they are correctly differentiated between, however it does not mean that two points separated by less than this distance will \textit{never} be correctly differentiated between.
 
 Considering the first scenario of static viewpoints this level of positional accuracy is sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
 
@@ -699,9 +694,13 @@ Considering the second scenario of freeform exploration, this level of positiona
 
 Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy of VTW and its tendency not to settle renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several metres to one side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few meters in the manner that scenario 3 envisages would be unworkable in this manner.
 
-In summary, the accuracy of GPS data experienced during VTW testing allowed for the first scenario of static viewpoints and for some aspect of the second scenario of freeform exploration. However for a parallel reality system to allow for the full experience of the second scenario, for any aspect of the third scenario and to operate at locations with more substantial obstructions to the sky (including indoors), a more accurate positioning system than GPS is required.
+Thus the accuracy of position tracking experienced during VTW testing allowed for the first scenario of static viewpoints and for some aspect of the second scenario of freeform exploration. However for a parallel reality system to allow for the full experience of the second scenario, for any aspect of the third scenario and to operate at locations with more substantial obstructions to the sky (including indoors), a more accurate positioning system than GPS is required.
 
 %The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit from better graphical quality and higher responsiveness to changes in user orientation.
+
+When considering the implications of the orientation control and graphical performance it is with the knowledge that framerate has a readily apparent effect upon user satisfaction of graphical applications, with higher framerates and the smoother and more natural seeming motion that they result in leading to higher satisfaction~\cite{Claypool2006a}. Framerate is often a trade off between the computational power of the available graphical hardware and the quality and complexity of the graphics desired. Assuming no change in software, an increase in graphical quality and complexity almost invariably requires an increase in the computational power of the graphical hardware in order to maintain a similar framerate, while sacrificing graphical quality and complexity will result in an increase in framerate upon the same graphical hardware. This trade off is often more apparent for applications destined for mobile devices than those for desktop devices, as the computational power of mobile graphical hardware is more strictly limited by the size, weight, power consumption and heat dissipation limitations of mobile devices.
+
+The negative effect upon user experience of VTW caused by the low framerates, the restriction of graphical quality to those levels that allowed for sufficient framerates to be produced, and the slow response of camera orientation to user movement, should be viewed as a limitation of the available hardware and the use of a software platform not intended for mobile use, rather than a limitation of the principal of parallel reality. Already since the development of VTW, we have seen the introduction of handheld devices with substantially greater graphical capabilities, additionally containing orientation sensors of equal or higher accuracy and that boast much higher sample rates. Exploiting these advances will allow for substantial increases to user satisfaction of parallel reality experiences, while making such experiences more accessible as the reliance upon supplementary supporting hardware to imbue the device used with the required positional and orientational sensing abilities becomes moot.
 
 %=========================================================================================================
 
@@ -717,16 +716,16 @@ Revisiting the definition of parallel reality (section \ref{parallelrealityinbac
 	\item The experiential aspect - can the user freely switch between the environments?
 \end{enumerate}
 
-Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, the experience of using the system at St Andrews Cathedral fell somewhat short of the vision for the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment in VTW was instead seen as a window within the wider real environment. Even when focussing attention upon the virtual environment via the device's screen, one also perceived the real environment around it, filling the majority of the viewport, due to the greater `peripheral view'~\cite{Billinghurst2014} that the handheld interface presents compared to a HMD. The experience was more of \textit{mixing} (even if that mixing was performed by the human mind and not by the device itself), distributing attention by gaze, rather than \textit{switching} to a complete/discrete environment at the exclusion of the other, distributing attention by time.
+Although the VTW platform was developed with investigation of the parallel reality concept in mind and definitely fulfils the environmental aspect of the definition by presenting complete real and virtual environments to the user, the experience of using the system at St Andrews Cathedral fell somewhat short of the vision for the experiential aspect of the definition. Instead of \textit{switching} between the two complete environments, the virtual environment in VTW was instead seen as a window within the wider real environment. Even when focussing attention upon the virtual environment via the device's screen, one also perceived the real environment around it, filling the majority of the viewport, due to the greater `peripheral view'~\cite{Billinghurst2014} that the handheld interface presented compared to a HMD. The experience was more of \textit{mixing} (even if that mixing was performed by the human mind and not by the device itself), distributing attention by gaze, rather than \textit{switching} to a complete/discrete environment at the exclusion of the other, distributing attention by time.
 
 Both with previous sitsim projects and VTW the user's view is arguably always a mix, never purely virtual, and the user's position upon the locus of attention axis of the combined Milgram/Waterworth model can never reach its virtual extreme, due to the fact that the screen is always seen as a part of the larger real environment. This was a consideration in section \ref{the-virtual-time-window}, however it was only upon experiencing the platform first hand that the extent of this situation could be comprehended. This similarity in experience between VTW and traditional augmented reality platforms may clarify how from the point of view of user experience, sitsim projects have been labelled in the past as indirect augmented reality, even if from the point of view of the environments that they provide, they are distinct.
 
 %=========================================================================================================
 
-\section{Influence of VTW}
+\subsection{Influence of VTW}
 \label{influence-factors-vtw-chapter}
 
-Table \ref{influence-factors-vtw-table} lists the principle factors raised throughout the experience of designing, developing and testing the VTW platform, which influenced the subsequent creation of the Mirrorshades parallel reality platform (chapter \ref{chapter-mirrorshades}).
+Table \ref{influence-factors-vtw-table} lists the principle factors raised throughout the experience of designing, developing and evaluating the VTW platform, which influenced the subsequent creation of the Mirrorshades parallel reality platform (chapter \ref{chapter-mirrorshades}).
 
 \begin{table}[h]
 \begin{center}
