--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-mirrorshades}
 
-This chapter discusses the design and development of a parallel reality platform called Mirrorshades that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS), using the Unity game engine. This platform allows its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform enabled investigation of parallel reality in a manner that fully realised the envisioned experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
+This chapter discusses the design and development of a parallel reality platform called Mirrorshades that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS), using the Unity game engine. This platform allows its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform built upon VTW and enabled investigation of parallel reality in a manner that fully realised the envisioned experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
 
 %Previous XR research approached the vacancy problem by integrating sensor/actuator networks into the environments, such that actions in one could manifest in the other, however direct visual engagement with the virtual environment was only possible from static interfaces at pre-determined locations within the real environment~\cite{Lifton2007a, Dublon2011}. The platform discussed in this document addresses this shortcoming by providing a mobile interface for visual engagement with both environments of a XR system, allowing the user to transition between viewing their real environment and a virtual environment at any time while maintaining the freedom to move around them, multiplexing visual stimuli from their real surroundings and from a parallel, virtual `mirror world'~\cite{Gelernter1993}.
 
@@ -24,15 +24,9 @@ This chapter discusses the design and development of a parallel reality platform
 %With a display technology such as an immersive VR HMD however, 
 
 \section{Overview}
-The development of the VTW platform as a preliminary foray into applying the concept of parallel reality to the field of cultural heritage performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage}, wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly explore the freeform exploration scenario for expansive outdoor cultural heritage sites, in which visitors view artefacts within the environments from some distance from where the inaccuracy of positioning is not apparent.
+The development of the VTW platform as a preliminary foray into applying the concept of parallel reality to the field of cultural heritage and investigating the suitability of a familiar modality of alternate reality for  this purpose performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage}, wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly explore the freeform exploration scenario for expansive outdoor cultural heritage sites, in which visitors view artefacts within the environments from some distance from where the inaccuracy of positioning is not apparent. However the performance and the experiential aspect of the platform left much room for improvement.
 
-To continue the investigation of parallel reality, once again using cultural heritage as a real world case study, the platform described in this chapter aimed to allow the investigation of the use of parallel reality at indoor cultural heritage sites. This allowed the use of an IPS to track the user's position, which promised greater accuracy than even SBAS enhanced GPS did outdoors, allowing for the full freeform exploration scenario to be explored, even in much less expansive sites, and even for aspects of the third scenario with detailed comparison to be experienced. Furthermore the use of a HMD capable of producing stereoscopic 3D visuals that completely fill the user's view, in place of a tablet, allowed the investigation of parallel reality to extend to systems that present a completely immersive virtual experience instead of a `window' into the virtual, realising the true essence of the envisioned experiential aspect of parallel reality that VTW did not provide. Whilst VTW presented the user with a `screen' into the virtual, around which the user could still perceive their real environment, with the HMD of this subsequent platform \textit{``there is practically no screen''} as it \textit{``totally covered by our field of view, vanishes''}~\cite{Tzortzaki2002}.
-
-%=========================================================================================================
-
-%***floob
-
-Table \ref{influence-factors-mirrorshades-table} outlines how the factors highlighted from the VTW platform, in table \ref{influence-factors-vtw-table} in section \ref{influence-factors-vtw-chapter}, were addressed for the Mirrorshades platform.
+Using cultural heritage as a real world case study once more, the Mirrorshades platform described in this chapter addressed these shortcomings as outlined in table \ref{influence-factors-mirrorshades-table}, which can be referenced against table \ref{influence-factors-vtw-table} from the previous chapter (section \ref{influence-factors-vtw-chapter}).
 
 \begin{table}[h]
 \begin{center}
@@ -74,6 +68,9 @@ User Experience & Fully realises the vision of switching wholly between environm
 \label{influence-factors-mirrorshades-table}
 \end{table}
 
+Identifying a suitable indoor cultural heritage site for testing the platform allowed the use of an IPS to track the user's position, which promised greater accuracy than even SBAS enhanced GPS did outdoors. This allowed for the full freeform exploration scenario to be explored, even in much less expansive sites, and even for aspects of the third scenario with detailed comparison to be experienced. The use of a HMD capable of producing stereoscopic 3D visuals that completely fill the user's view, in place of a tablet, allowed the investigation of parallel reality to extend to systems that present a completely immersive virtual experience instead of a `window' into the virtual, realising the true essence of the envisioned experiential aspect of parallel reality that VTW did not provide. Whilst VTW presented the user with a `screen' into the virtual, around which the user could still perceive their real environment, with the HMD of this subsequent platform \textit{``there is practically no screen''} as it \textit{``totally covered by our field of view, vanishes''}~\cite{Tzortzaki2002}.
+
+The 1kHz head tracking built into the HMD greatly improved the accuracy and responsiveness of orientation tracking compared to VTW, while the use of a small but powerful laptop computer in combination with the highly optimized Unity game engine to render the visuals presented via the HMD resulted in not just higher framerates but also a higher level of detail.
 
 %=========================================================================================================
 
@@ -532,7 +529,7 @@ Initial testing of IndoorAtlas at St Salvator's chapel proved surprisingly succe
 \TwoFig{sallies-splodges-red.png}{Positions reported during preliminary testing of IndoorAtlas at St Salvator's chapel.}{sallies-splodges-red.png}
        {sallies-indoor-atlas-routes.png}{Routes mapped in St Salvator's chapel during offline mapping phase.}{sallies-indoor-atlas-routes.png}
 
-Upon closer inspection of the chapel, metal gratings set into the floor and which run along the central aisle, representing much of the horizontal movement in figure \ref{sallies-splodges-red.png} and shown in figure \ref{DSCN0172.jpg} and figure \ref{DSCN0174.jpg} in detail, may explain this unexpectedly high performance. These gratings also extend to the open area in front of the altar as shown in figure \ref{DSCN0175.jpg}, however in other areas such as when walking to either side of the altar (far right of figures \ref{sallies-splodges-red.png} and \ref{sallies-indoor-atlas-routes.png}) there were no such obvious sources of magnetic interference (see figure \ref{DSCN0176.jpg}) to account for the maintained accuracy. Less obvious explanations could be possible ferromagnetic properties of the stone used in the building's construction and the presence of electrical lighting and audio systems (loudspeaker and light fixture visible in figure \ref{DSCN0177.jpg}) which presumably make use of electrical cables routed throughout the building.
+Upon closer inspection of the chapel, metal gratings set into the floor and which run along the central aisle, representing much of the horizontal movement in figure \ref{sallies-splodges-red.png} and shown in figure \ref{DSCN0172.jpg} and figure \ref{DSCN0174.jpg} in detail, may explain this unexpectedly high performance. These gratings also extend to the open area in front of the altar as shown in figure \ref{DSCN0175.jpg}, however in other areas such as when walking to either side of the altar (far right of figures \ref{sallies-splodges-red.png} and \ref{sallies-indoor-atlas-routes.png}) there were no such obvious sources of magnetic interference (see figure \ref{DSCN0176.jpg}) to account for the maintained accuracy. Less obvious explanations could be possible ferromagnetic properties of the stone used in the building's construction and the presence of electrical lighting and audio systems (loudspeaker and light fixture visible in figure \ref{DSCN0177.jpg}) which presumably make use of electrical cables routed throughout the building. After experience such good performance with IndoorAtlas, it was selected as the IPS to move forward with for the Mirrorshades platform.
 
 \begin{figure}[h]
     \begin{center}
@@ -564,7 +561,7 @@ Upon closer inspection of the chapel, metal gratings set into the floor and whic
 
 \TwoFig{Sallies-photos/DSCN0176.jpg}{Altar in St Salvator's chapel, with no obvious metal.}{DSCN0176.jpg}
        {Sallies-photos/DSCN0177.jpg}{Loudspeaker and electric light fixture within St Salvator's chapel.}{DSCN0177.jpg}
-       
+
 %=========================================================================================================
 
 \newpage
